examples/test/testpolicy1889.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1889
  namespace: namespace37
spec:
  podSelector:
    matchLabels:
      key39: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value19
          key0: value2
      podSelector:
        matchLabels:
          key40: value0
          key44: value35
          key15: value32
